--- a/index.html
+++ b/index.html
@@ -3,76 +3,79 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="header">
-      <div class="header-left">
+      <div class="header-logo">
         <p class="logo">Header Logo</p>
-    </div>
-      <div class="header-right">
+      </div>
+      <div class="header-link">
           <a ref="#">header link one</a>
           <a ref="#">header link two</a>
           <a ref="#">header link three</a>
       </div>
     </div>
-
+    
     <div class="main">
       <div class="first-section">
         <div class="left">
           <h1 class="hero">This website is awesome</h1>
-          <p class="subtext">This website has some subtext that goes under the main title.</p>
+          <p class="subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</p>
           <button class="first-button">Sign up</button>
         </div>
         <div class="right">
           <div class="image">this is a placeholder for an image</div>
         </div>
       </div>
+
       <div class="second-section">
-        <h1 class="info-header">Some random information.</h1>
+        <h1 class="title">Some random information.</h1>
         <div class="card-container">
           <div class="card">
-            <div class="img"></div>
-            <p>this is some subtext under an illustration of an image</p>
+            <div class="box"></div>
+            <div class="text">this is some subtext under an illustration of an image</div>
           </div>
           <div class="card">
-            <div class="img"></div>
-            <p>this is some subtext under an illustration of an image</p>
+            <div class="box"></div>
+            <div class="text">this is some subtext under an illustration of an image</div>
           </div>
           <div class="card">
-            <div class="img"></div>
-            <p>this is some subtext under an illustration of an image</p>
+            <div class="box"></div>
+            <div class="text">this is some subtext under an illustration of an image</div>
           </div>
           <div class="card">
-            <div class="img"></div>
-            <p>this is some subtext under an illustration of an image</p>
+            <div class="box"></div>
+            <div class="text">this is some subtext under an illustration of an image</div>
           </div>
         </div>
       </div>
-      <div class="third-section">
-        <div class="quote">
-          <em>This is an inspring quote, or a testimonial from a customer.
-              Maybe it's just filling up space, or maybe people will actually read it. Who knows?
-              All I know is that it looks nice.</em>
-          <p>-Thor, God of Thunder</p>
-        </div>
+
+      <div class="quote">
+        <em>This is an inspring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually read it. Who knows?
+            All I know is that it looks nice.
+        </em>
+        <p>-Thor, God of Thunder</p>
       </div>
+      
       <div class="fourth-section">
         <div class="container">
-          <div class="left">
+          <div class="left-container">
             <strong>Call to action! It's time!</strong>
             <p class="secondary">Sign up for our product by clicking that button right over there!</p>
           </div>
-          <div class="right">
+          <div class="right-container">
             <button class="second-button">Sign up</button>
           </div>
         </div>
       </div>
-      <div class="footer">
-        <p>Copyright © The Odin Project 2021</p>
-      </div>
+    </div>
+
+    <div class="footer">
+      <p class="c">Copyright © The Odin Project 2021</p class>
     </div>
   </body>
 </html>
